[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-response-triage"
version = "2.1.0"
description = "SRE/DevOps incident triage environment for AI agent evaluation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "flask>=3.0,<4.0",
    "openai>=2.7.2",
    "pyyaml>=6.0",
    "requests>=2.31",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
